; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/z80/extr_z80asm.c_rd_r_add.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/z80/extr_z80asm.c_rd_r_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"ixl\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ixh\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"iyl\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"iyh\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"b\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"c\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"d\00", align 1
@.str.7 = private unnamed_addr constant [2 x i8] c"e\00", align 1
@.str.8 = private unnamed_addr constant [2 x i8] c"h\00", align 1
@.str.9 = private unnamed_addr constant [2 x i8] c"l\00", align 1
@.str.10 = private unnamed_addr constant [7 x i8] c"( hl )\00", align 1
@.str.11 = private unnamed_addr constant [2 x i8] c"a\00", align 1
@.str.12 = private unnamed_addr constant [8 x i8] c"( ix +)\00", align 1
@.str.13 = private unnamed_addr constant [8 x i8] c"( iy +)\00", align 1
@.str.14 = private unnamed_addr constant [3 x i8] c"hl\00", align 1
@.str.15 = private unnamed_addr constant [3 x i8] c"ix\00", align 1
@.str.16 = private unnamed_addr constant [3 x i8] c"iy\00", align 1
@.str.17 = private unnamed_addr constant [2 x i8] c"*\00", align 1
@__const.rd_r_add.list = private unnamed_addr constant [19 x i8*] [i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.17, i32 0, i32 0), i8* null], align 16
@readbyte = common dso_local global i8* null, align 8
@writebyte = common dso_local global i32 0, align 4
@indexed = common dso_local global i32 0, align 4
@indexjmp = common dso_local global i8* null, align 8
@addHL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @rd_r_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rd_r_add(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  %5 = alloca [19 x i8*], align 16
  %6 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  %7 = bitcast [19 x i8*]* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %7, i8* align 16 bitcast ([19 x i8*]* @__const.rd_r_add.list to i8*), i64 152, i1 false)
  %8 = load i8**, i8*** %3, align 8
  %9 = getelementptr inbounds [19 x i8*], [19 x i8*]* %5, i64 0, i64 0
  %10 = call i32 @indx(i8** %8, i8** %9, i32 0, i8** %6)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %11, 18
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i8*, i8** %6, align 8
  store i8* %14, i8** @readbyte, align 8
  store i32 1, i32* @writebyte, align 4
  store i32 7, i32* %2, align 4
  br label %52

15:                                               ; preds = %1
  %16 = load i32, i32* %4, align 4
  %17 = icmp sgt i32 %16, 14
  br i1 %17, label %18, label %27

18:                                               ; preds = %15
  %19 = load i32, i32* %4, align 4
  %20 = icmp sgt i32 %19, 15
  br i1 %20, label %21, label %26

21:                                               ; preds = %18
  %22 = load i32, i32* %4, align 4
  %23 = sub nsw i32 %22, 16
  %24 = mul nsw i32 32, %23
  %25 = add nsw i32 221, %24
  store i32 %25, i32* @indexed, align 4
  br label %26

26:                                               ; preds = %21, %18
  store i32 15, i32* %2, align 4
  br label %52

27:                                               ; preds = %15
  %28 = load i32, i32* %4, align 4
  %29 = icmp sle i32 %28, 4
  br i1 %29, label %30, label %39

30:                                               ; preds = %27
  %31 = load i32, i32* %4, align 4
  %32 = icmp sgt i32 %31, 2
  %33 = zext i1 %32 to i32
  %34 = mul nsw i32 32, %33
  %35 = add nsw i32 221, %34
  store i32 %35, i32* @indexed, align 4
  %36 = load i32, i32* %4, align 4
  %37 = and i32 %36, 1
  %38 = sub nsw i32 6, %37
  store i32 %38, i32* %2, align 4
  br label %52

39:                                               ; preds = %27
  %40 = load i32, i32* %4, align 4
  %41 = sub nsw i32 %40, 4
  store i32 %41, i32* %4, align 4
  %42 = load i32, i32* %4, align 4
  %43 = icmp slt i32 %42, 9
  br i1 %43, label %44, label %46

44:                                               ; preds = %39
  %45 = load i32, i32* %4, align 4
  store i32 %45, i32* %2, align 4
  br label %52

46:                                               ; preds = %39
  %47 = load i32, i32* %4, align 4
  %48 = sub nsw i32 %47, 9
  %49 = mul nsw i32 32, %48
  %50 = add nsw i32 221, %49
  store i32 %50, i32* @indexed, align 4
  %51 = load i8*, i8** %6, align 8
  store i8* %51, i8** @indexjmp, align 8
  store i32 7, i32* %2, align 4
  br label %52

52:                                               ; preds = %46, %44, %30, %26, %13
  %53 = load i32, i32* %2, align 4
  ret i32 %53
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @indx(i8**, i8**, i32, i8**) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
